--- a/dapp/package.json
+++ b/dapp/package.json
@@ -40,8 +40,8 @@
     "gsap": "^2.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "material-ui": "^1.0.0-beta.6",
-    "material-ui-icons": "^1.0.0-beta.5",
+    "material-ui": "1.0.0-beta.6",
+    "material-ui-icons": "1.0.0-beta.5",
     "normalize.css": "^7.0.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
