--- a/dapp/package.json
+++ b/dapp/package.json
@@ -61,7 +61,7 @@
     "truffle-contract": "^1.1.8",
     "truffle-hdwallet-provider": "0.0.3",
     "url-loader": "0.6.2",
-    "web3": "^0.20.2",
+    "web3": "1.0.0-beta.37",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
